--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -97,3 +97,17 @@ input:-webkit-autofill {
   background-color: $grey-page;
   color: #fff;
 }
+.custom-pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
+}
+// .block {
+//   color: #fff !important;
+// }
+
+.q-pagination__middle {
+  background-color: #678966;
+  border-radius: 5px;
+  padding-bottom: 2px;
+}
